# grad-project

./: .gitignore  README.md
notspot_sim_py/: README.md
notspot_sim_py/src/notspot/launch/: run_robot_gazebo.launch
notspot_sim_py/src/notspot_description/launch/: notspot_rviz.launch
notspot_sim_py/src/notspot_description/urdf/: notspot.urdf  notspot.urdf.xacro
notspot_sim_py/src/notspot_gazebo/: CMakeLists.txt  package.xml
notspot_sim_py/src/notspot_gazebo/config/: models.yaml  models_old.yaml
notspot_sim_py/src/notspot_gazebo/launch/: simulation.launch
notspot_sim_py/src/notspot_gazebo/launch/models/: icy_ramp.sdf  ramp.sdf
notspot_sim_py/src/notspot_gazebo/launch/models/ramp/: model.config  ramp.sdf
notspot_sim_py/src/notspot_gazebo/launch/models/ramp/meshes/: ramp.STL
notspot_sim_py/src/notspot_gazebo/launch/world/: P.world  P2.world  P3.world  box.world  forest.world  heightmap.world  maze.world  maze2.world  maze4.world  maze_final.world  maze_final_backup.world
notspot_sim_py/src/notspot_gazebo/scripts/: model_pose_subscriber.py  model_position_subscriber.py  robot_reset.py  robot_spawner.py
notspot_sim_py/src/notspot_joystick/scripts/: JoystickEmulator.py
notspot_sim_py/src/reinforcement_learning/: CMakeLists.txt  package.xml
notspot_sim_py/src/reinforcement_learning/config/: hyperparameters.yaml
notspot_sim_py/src/reinforcement_learning/launch/: reinforcement_learning.launch
realsense2_description/urdf/: _d435.urdf.xacro
velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
(+16 files in other folders)
